k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs
spec:
  selector:
    app: nextjs
  ports:
  - port: 3000
